# CEI

./: LICENSE  README.md  pyproject.toml
src/CEI/: __init__.py  api.py  method.py
src/CEI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seqcall/: bin_check.py
tests/: CLE0083_BP1_joint.xlsx
