[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CEI"
version = "0.1.0"
description = "Joint library-size permutation/ACAT and FDR-based expansion detection for TCR clones."
authors = [
    { name = "Yunbei Pan", email = "yunbei97@ucla.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "openpyxl",  # for pd.read_excel .xlsx
]

[project.scripts]
tcrjoint = "CEI.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]